基本框架搭建完，nat, mysql, redis基本配置好，没有运行